# photonPicks

./: .gitignore  Cargo.toml  background.js  error_messages.json  ideas-feedback.md  ideas.txt  index.html  index.md  main.js  manifest.json  prompt  safe_tokens.txt  styles.css  test_tokens.txt  token_messages.json  token_messages.txt
config/: default.toml
data/db/: 000021.sst  IDENTITY  MANIFEST-000018  OPTIONS-000012
src/: config.rs  error.rs  errors.rs  handlers.rs  main.rs  math.rs  message_handler.rs  metrics.rs  models.rs  token_analysis.rs  websocket.rs
src/browser/: run_in_broswer.js  run_in_browser_v2.js  run_in_browser_v3.js
src/models/: mod.rs  token.rs  websocket.rs
src/risk/: mod.rs
src/ui/: mod.rs
src/ui/filters/: filter_box.rs  mod.rs
src/websocket/: handler.rs  mod.rs  server.rs
tests/: main.rs
